--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@ant-design/cssinjs": "^1.24.0",
+    "antd": "^5.27.3",
     "html2canvas": "^1.4.1",
     "next": "15.5.3",
     "react": "19.1.0",
@@ -18,6 +20,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "eslint": "^9",
-    "eslint-config-next": "15.5.3"
+    "eslint-config-next": "15.5.3",
+    "typescript": "^5.9.2"
   }
 }
