--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "@ant-design/cssinjs": "^1.24.0",
     "antd": "^5.27.3",
-    "html2canvas": "^1.4.1",
+    "html-to-image": "^1.11.13",
     "next": "15.5.3",
     "react": "19.1.0",
     "react-dom": "19.1.0"
