--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@ant-design/cssinjs": "^1.24.0",
+    "@ant-design/icons": "5.x",
     "antd": "^5.27.3",
     "html-to-image": "^1.11.13",
     "next": "15.5.3",
