--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "html2canvas": "^1.4.1",
     "next": "15.5.3",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
