--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@ant-design/icons": "5.x",
     "antd": "^5.27.3",
     "html2canvas": "^1.4.1",
+    "lodash": "^4.17.21",
     "next": "15.5.3",
     "react": "19.1.0",
     "react-dom": "19.1.0",
